# yaair

./: .gitignore  Cargo.toml  README.md  clippy.toml  deny.toml  flake.nix  renovate.json
.cargo/: config.toml
.github/workflows/: build-and-release.yml  dispatcher.yml  rust.yml
examples/: gradient.rs
rufi/: Cargo.toml
rufi/src/: lib.rs
rufi/src/rufi/: aggregate.rs  engine.rs  mod.rs  network.rs
rufi/src/rufi/alignment/: alignment_stack.rs
rufi/src/rufi/data/: field.rs  state.rs
rufi/src/rufi/messages/: inbound.rs  outbound.rs  path.rs  serializer.rs  valuetree.rs
rufi_serde/: Cargo.toml
rufi_serde/src/: lib.rs
rufi_serde/src/rufi_serde/: aggregate_json_test.rs  json.rs  mod.rs
src/: lib.rs
src/rufi/: aggregate.rs  field.rs  messages.rs  mod.rs
src/rufi/alignment/: alignment_stack.rs
src/rufi/data/: mod.rs  state.rs
src/rufi/engine/: engine.rs
src/rufi/messages/: inbound.rs  mod.rs  outbound.rs  path.rs  serializer.rs  valuetree.rs
src/rufi/network/: network.rs
yaair/: CHANGELOG.md  Cargo.toml
yaair/src/rufi/alignment/: mod.rs
yaair/src/rufi/data/: field.rs  mod.rs
yaair/src/rufi/messages/: inbound.rs  serializer.rs  valuetree.rs
yaair_serde/: CHANGELOG.md  Cargo.toml
yaair_serde/src/rufi_serde/: aggregate_json_test.rs  json.rs
