[package]
name = "yaair"
version = "0.1.0"
edition = "2021"
authors = [
    "Nicolas Farabegoli <nicolas.farabegoli@gmail.com>"
]
license = "Apache-2.0"
description = "Yet Another Aggregate (computing) Implementation in Rust. A blazing fast and memory-efficient implementation of Aggregate Computing."

[dependencies]
serde = { version = "1.0.226", default-features = false, features = ["derive"] }

[dev-dependencies]
serde_json = { version = "1.0.145" }

[features]
default = [ "std" ]
std = [ "serde/std" ]
